--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,11 @@
 - title: "xShowroom"
-  description: "xShowroom is a lead management system designed by Cubastion Consulting pvt ltd"
+  description: "xShowroom is a lead management system designed by Cubastion Consulting Pvt Ltd"
   href: "http://dev.xshowroom.in"
 
 - title: "xConnect"
-  description: "xConnect is a remote vehicle control system designed by Cubastion Consulting pvt"
+  description: "xConnect is a remote vehicle control system designed by Cubastion Consulting Pvt Ltd"
   href: "http://xconnect.cubastion.com"
+  
+- title: "Voltas Selfcare"
+  description: "Voltas self-care is an after sales customer service system designed by Cubastion Consulting Pvt Ltd"
+  href: "http://vselfcare.cubastion.com"
